force-app/main/default/objects/Exception_Logs__c/Exception_Logs__c.object-meta.xml
<CustomObject>
    <description>This object is used to store exceptions that come from the apex class methods.</description>
    <label>DocGenius Exception Logs</label>
    <nameField>
        <displayFormat>DG_Exception-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocGenius Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>