force-app/main/default/objects/Exception_Logs__c/fields/Exception_Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Exception_Stack_Trace__c</fullName>
    <label>Exception Stack Trace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>