force-app/main/default/objects/Exception_Logs__c/fields/Governer_Limits__c.field-meta.xml
<CustomField>
    <fullName>Governer_Limits__c</fullName>
    <label>Governer Limits</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>