force-app/main/default/objects/Exception_Logs__c/fields/Untitled_spreadsheet_Untitled_spreadshe__c.field-meta.xml
<CustomField>
    <fullName>Untitled_spreadsheet_Untitled_spreadshe__c</fullName>
    <label>Untitled spreadsheet Untitled spreadshe</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>