force-app/main/default/objects/Exception_Logs__c/fields/Whole_Exception_field__c.field-meta.xml
<CustomField>
    <fullName>Whole_Exception_field__c</fullName>
    <label>Whole Exception field</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>